[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Customer.gd" type="Script" id=1]
[ext_resource path="res://images/customer_speech_bubble.png" type="Texture" id=2]
[ext_resource path="res://font/Ritaglio.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 18
font_data = ExtResource( 3 )

[node name="Customer" type="Node2D"]
script = ExtResource( 1 )

[node name="HideCustomerRequestTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 256 )
scale = Vector2( 1, 0.64 )
texture = ExtResource( 2 )
centered = false

[node name="CustomerRequestLabel" type="Label" parent="."]
margin_left = 16.0
margin_top = 278.0
margin_right = 296.0
margin_bottom = 303.0
custom_fonts/font = SubResource( 1 )
text = "Place holder customer request text"

[connection signal="timeout" from="HideCustomerRequestTimer" to="." method="_on_Timer_timeout"]
